Added coach marks and solved #37

--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -32,11 +32,11 @@
   "add_kanji_update_title": "Aktualisieren",
   "add_kanji_new_title": "Hinzufügen",
   "add_kanji_textForm_kanji": "Wort",
-  "add_kanji_textForm_kanji_ext": "家具",
+  "add_kanji_textForm_kanji_ext": "学生",
   "add_kanji_textForm_reading": "Betonung",
-  "add_kanji_textForm_reading_ext": "かぐ",
+  "add_kanji_textForm_reading_ext": "がくせい",
   "add_kanji_textForm_meaning": "Bedeutung",
-  "add_kanji_textForm_meaning_ext": "Möbel",
+  "add_kanji_textForm_meaning_ext": "Studenten",
   "add_kanji_save": "Speichern",
   "add_kanji_saveAndNext": "Weiteres Kanji hinzufügen",
   "add_kanji_copy": "Als Betonung kopieren",
@@ -105,7 +105,7 @@
   "list_details_practice_button_label_ext": "練習",
   "list_details_learningMode_spatial": "Spaced repetition",
   "list_details_learningMode_random": "Zufälliges Lernen",
-  "list_details_empty": "Kein verfügbares Wort. ",
+  "list_details_empty": "Kein verfügbares Wort.\n\nFügen Sie neue Wörter zu dieser Liste hinzu, indem Sie auf '+' tippen, oder importieren Sie sie aus Ihrem Backup.",
   "list_details_searchBar_hint": "Suche nach Wort, Bedeutung, Aussprache",
   "kan_list_tile_createDialogForDeletingKanList_title": "KanList entfernen",
   "kan_list_tile_createDialogForDeletingKanList_content": "Möchten Sie diese Liste und ihren gesamten Inhalt wirklich entfernen?",
@@ -126,7 +126,7 @@
   "kanji_lists_searchBar_hint": "Suche nach Listenname, Wort, Bedeutung, Aussprache",
   "kanji_lists_newUpdateAvailable_label": "Neue Version!",
   "kanji_lists_load_failed": "Fehler beim Abrufen der Listen.",
-  "kanji_lists_empty": "Keine verfügbaren Listen.",
+  "kanji_lists_empty": "Keine verfügbaren Listen.\n\nErstellen Sie neue Listen für Ihre Studie, indem Sie auf '+' tippen, oder importieren Sie sie aus Ihrem Backup.",
   "done_button_label": "Fertig!",
   "perfect_button_label": "Perfekt",
   "mid_perfect_button_label": "Gut",
@@ -226,5 +226,12 @@
   "dict_jisho_add_kanji_bottom_sheet_title": "Wählen Sie eine KanList, um das Wort hinzuzufügen",
   "dict_jisho_add_kanji_label": "Zu KanList hinzufügen",
   "dict_add_kanji_title": "Wort malen",
-  "dict_model_not_loaded": "Modell konnte nicht geladen werden :("
+  "dict_model_not_loaded": "Modell konnte nicht geladen werden :(",
+  "coach_tutorial_kanlists_1": "Hier sind die von Ihnen erstellten Vokabellisten (es handelt sich um Beispielvokabellisten). In eine neu erstellte Liste sollten Sie die Wörter aufnehmen, die Sie nach einem von Ihnen festgelegten Thema benötigen.",
+  "coach_tutorial_kanlists_2": "Fügen Sie eine Liste hinzu, indem Sie hier klicken, um die Vokabeln oder Vokabeln, die Sie lernen, kategorisiert aufzunehmen.\n\nSie können Listen nach Buchlektionen, Thema, Schwierigkeitsgrad ... erstellen.\n\nWenn Sie eine Liste löschen möchten, lassen Sie sie gedrückt und es erscheint ein Dialog, um diese Aktion durchzuführen.",
+  "coach_tutorial_kanlists_3": "Hier sind die zusätzlichen Aktionen. Sie können neue Wörter mit Hilfe des Wörterbuchs nachschlagen (links) oder verschiedene Tests mit den Vokabeln in Ihren Listen durchführen, um eine zusätzliche Herausforderung zu schaffen (rechts). Es gibt mehrere Arten von Tests: \n\nAuswahltest: Wählen Sie bestimmte Listen aus, um deren Vokabeln in einen Zufallstest mit 30 Wörtern einzubeziehen.\n\nBlitz: 30 Wörter werden nach dem Zufallsprinzip ausgewählt, wobei der gesamte Wortschatz berücksichtigt wird.\n\nErinnerung: Die 30 Wörter, die Sie am längsten nicht mehr gelernt haben, werden ausgewählt.\n\nZufallszahlen: Wählen Sie einen Zahlenbereich aus und erstellen Sie einen Hörtest, der ausschließlich auf 30 zufälligen Zahlen innerhalb des gewählten Bereichs basiert.",
+  "coach_tutorial_detail_1": "Hier werden alle Vokabeln aus der Liste angezeigt. Sie können im Laufe Ihres Studiums jederzeit mehr hinzufügen.\n\nJedes Mal, wenn Sie in einem Bereich (z. B. Schreiben) üben, wird das Vokabular aktualisiert und der Prozentsatz des Erfolgs in diesem Bereich angezeigt.",
+  "coach_tutorial_detail_2": "Fügen Sie weitere Vokabeln hinzu, die Sie auf der Straße, beim Lernen, Lesen, in Videospielen oder Anime sehen, indem Sie hier klicken.\n\n Sie können Wörter erstellen, indem Sie ihre Aussprache und Bedeutung hinzufügen.",
+  "coach_tutorial_detail_3": "Hier sind die zusätzlichen Aktionen. Sie können den Lernmodus ändern: zufällig oder räumlich (links) oder einen Blitztest nur dieser Vokabelliste machen (rechts).\n\nDer Lernmodus bestimmt die Reihenfolge des Lernens beim Üben einer Vokabelliste:\n\nWenn er zufällig ist, wird die Reihenfolge der Wörter beim Üben zufällig sein.\n\nWenn er räumlich ist, werden die Wörter, bei denen Sie in früheren Sitzungen am schlechtesten abgeschnitten haben, zuerst erscheinen, die letzten sind die, die Sie am besten kennen.",
+  "coach_tutorial_detail_4": "Wenn Sie hier klicken, können Sie schließlich den Namen der Liste ändern, falls Sie einen Fehler gemacht oder Ihre Meinung über das gewählte Thema oder die Kategorisierung geändert haben."
 }
