--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -32,11 +32,11 @@
   "add_kanji_update_title": "Update",
   "add_kanji_new_title": "Add",
   "add_kanji_textForm_kanji": "Word",
-  "add_kanji_textForm_kanji_ext": "家具",
+  "add_kanji_textForm_kanji_ext": "学生",
   "add_kanji_textForm_reading": "Pronunciation",
-  "add_kanji_textForm_reading_ext": "かぐ",
+  "add_kanji_textForm_reading_ext": "がくせい",
   "add_kanji_textForm_meaning": "Meaning",
-  "add_kanji_textForm_meaning_ext": "Furniture",
+  "add_kanji_textForm_meaning_ext": "Student",
   "add_kanji_save": "Save",
   "add_kanji_saveAndNext": "Add Another",
   "add_kanji_copy": "Copy to Pron.",
@@ -105,7 +105,7 @@
   "list_details_practice_button_label_ext": "練習",
   "list_details_learningMode_spatial": "Spatial Learning",
   "list_details_learningMode_random": "Random Learning",
-  "list_details_empty": "No available words.",
+  "list_details_empty": "No available words.\n\nAdd new words to this list by tapping on '+' or import them from your backup.",
   "list_details_searchBar_hint": "Search by word, meaning, pronunciation",
   "kan_list_tile_createDialogForDeletingKanList_title": "Remove a KanList",
   "kan_list_tile_createDialogForDeletingKanList_content": "Are you sure you want to remove this list and all its content?",
@@ -126,7 +126,7 @@
   "kanji_lists_searchBar_hint": "Search by list name, word, meaning, pronunciation",
   "kanji_lists_newUpdateAvailable_label": "New Update!!",
   "kanji_lists_load_failed": "Failed to retrieve lists.",
-  "kanji_lists_empty": "No available lists.",
+  "kanji_lists_empty": "No available lists.\n\nCreate new lists for your study by tapping on '+' or import them from your backup.",
   "done_button_label": "Done!",
   "perfect_button_label": "Perfect",
   "mid_perfect_button_label": "Good",
@@ -226,5 +226,12 @@
   "dict_jisho_add_kanji_bottom_sheet_title": "Select a KanList to add the word",
   "dict_jisho_add_kanji_label": "Add to KanList",
   "dict_add_kanji_title": "Draw word",
-  "dict_model_not_loaded": "Could not load model :("
+  "dict_model_not_loaded": "Could not load model :(",
+  "coach_tutorial_kanlists_1": "Here are the vocabulary lists created by you (these are sample vocabulary lists). In a newly created list, you should include the words you want according to a theme defined by you.",
+  "coach_tutorial_kanlists_2": "Add a list by clicking here to include the vocabulary or words you are learning in a categorised way.\n\nYou can create lists by book lessons, theme, difficulty...\n\nIf you want to delete a list, leave it pressed and a dialogue will appear to perform this action.",
+  "coach_tutorial_kanlists_3": "Here are the supplementary actions. You can look up new words using the dictionary (left) or perform different tests with the vocabulary in your lists for an extra challenge (right). There are several types of tests: \n\nSelection: select certain lists to include their vocabulary in a random test of 30 words.\n\nBlitz: 30 words are chosen at random taking into account all the vocabulary.\n\nRemembrance: the 30 words that you have not studied for the longest time are chosen.\n\nNumeric: choose between a number range and create a listening test solely based on 30 random numbers within the chosen range.",
+  "coach_tutorial_detail_1": "All the vocabulary in the list is displayed here. You can add more at any time as your study progresses.\n\nEach time you practise in an area (e.g. writing), the vocabulary will be updated showing the percentage of success in that area.",
+  "coach_tutorial_detail_2": "Add more vocabulary you see on the street, studying, reading, video games or anime by clicking here.\n\nYou can create words by adding their pronunciation and meaning.",
+  "coach_tutorial_detail_3": "Here are the supplementary actions. You can change the learning mode: random or spatial (left) or do a Blitz test of this vocabulary list only (right).\n\nThe learning mode determines the order of study when practising a vocabulary list:\n\nIf it is random, the order of the words when practising will be random.\n\nIf it is spatial, the words that you have been worst at in previous sessions will appear first, the last ones being the ones you know best.",
+  "coach_tutorial_detail_4": "Finally, if you click here, you will be able to change the name of the list, in case you have made a mistake or changed your mind about the chosen subject or categorisation."
 }
