--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -32,11 +32,11 @@
   "add_kanji_update_title": "Actualizar",
   "add_kanji_new_title": "Añadir",
   "add_kanji_textForm_kanji": "Palabra",
-  "add_kanji_textForm_kanji_ext": "家具",
+  "add_kanji_textForm_kanji_ext": "学生",
   "add_kanji_textForm_reading": "Pronunciación",
-  "add_kanji_textForm_reading_ext": "かぐ",
+  "add_kanji_textForm_reading_ext": "がくせい",
   "add_kanji_textForm_meaning": "Significado",
-  "add_kanji_textForm_meaning_ext": "Mobiliario",
+  "add_kanji_textForm_meaning_ext": "Estudiante",
   "add_kanji_save": "Guardar",
   "add_kanji_saveAndNext": "Añadir otro",
   "add_kanji_copy": "Copiar a Pron.",
@@ -105,7 +105,7 @@
   "list_details_practice_button_label_ext": "練習",
   "list_details_learningMode_spatial": "Aprendizaje espacial",
   "list_details_learningMode_random": "Aprendizaje aleatorio",
-  "list_details_empty": "No hay palabras disponibles",
+  "list_details_empty": "No hay palabras disponibles.\n\nAñade nuevas palabras a esta lista pulsando en '+' o importalas desde tu copia de seguridad.",
   "list_details_searchBar_hint": "Buscar por palabra, significado, pronunciación",
   "kan_list_tile_createDialogForDeletingKanList_title": "Eliminar una KanList",
   "kan_list_tile_createDialogForDeletingKanList_content": "¿Estás seguro de que quieres eliminar esta lista y todo su contenido?",
@@ -126,7 +126,7 @@
   "kanji_lists_searchBar_hint": "Buscar por nombre de lista, palabra, significado, pronunciación",
   "kanji_lists_newUpdateAvailable_label": "¡Nueva actualización!",
   "kanji_lists_load_failed": "Fallo al recuperar las listas",
-  "kanji_lists_empty": "No hay listas disponibles",
+  "kanji_lists_empty": "No hay listas disponibles.\n\nCrea nuevas listas para tu estudio pulsando en '+' o importalas desde tu copia de seguridad.",
   "done_button_label": "¡Hecho!",
   "perfect_button_label": "Perfecto",
   "mid_perfect_button_label": "Bien",
@@ -226,5 +226,12 @@
   "dict_jisho_add_kanji_bottom_sheet_title": "Selecciona una KanList para añadir la palabra",
   "dict_jisho_add_kanji_label": "Añadir a KanList",
   "dict_add_kanji_title": "Dibujar palabra",
-  "dict_model_not_loaded": "No se ha podido cargar el modelo :("
+  "dict_model_not_loaded": "No se ha podido cargar el modelo :(",
+  "coach_tutorial_kanlists_1": "Aquí se muestran las listas de vocabulario creadas por ti (estas son listas de vocabulario de muestra). En una lista recién creada, deberás incluir las palabras que quieras acorde a una temática definida por ti.",
+  "coach_tutorial_kanlists_2": "Añade una lista pulsando aquí para incluir el vocabulario o palabras que vayas aprendiendo de manera categorizada.\n\nPuedes crear las listas por lecciones de un libro, temática, dificultad...\n\nSi quieres eliminar una lista, dejala pulsada y aparecerá un diálogo para realizar dicha acción.",
+  "coach_tutorial_kanlists_3": "Aquí están las acciones suplementarias. Podrás buscar palabras nuevas mediante el diccionario (izquierda) o realizar distintos tests con el vocabulario de tus listas para un desafío extra (derecha). Hay varios tipos de tests: \n\nDe selección: selecciona listas determinadas para incluir su vocabulario en un test aleatorio de 30 palabras.\n\nBlitz: se escogen 30 palabras al azar teniendo en cuenta todo el vocabulario.\n\nDe recuerdo: se escogen las 30 palabras que más tiempo llevas sin estudiar.\n\nNumérico: se elige un rango de números y se crea un test de escucha únicamente con 30 números aleatorios dentro del rango elegido.",
+  "coach_tutorial_detail_1": "Aquí se muestra todo el vocabulario de la lista. Podrás añadir más en cualquier momento a medida que tu estudio avance.\n\nCada vez que practiques en una área (escritura por ejemplo), el vocabulario se actualizará mostrando el porcentaje de acierto de la misma.",
+  "coach_tutorial_detail_2": "Añade más vocabulario que veas por la calle, estudiando, leyendo, en videojuegos o anime pulsando aquí.\n\nPodrás crear palabras añadiendo su pronunciación y su significado.",
+  "coach_tutorial_detail_3": "Aquí están las acciones suplementarias. Podrás cambiar de modo de aprendizaje: aleatorio o espacial (izquierda) o realizar un test Blitz solamente de esta lista de vocabulario (derecha).\n\nEl modo de aprendizaje determina el orden de estudio al practicar una lista de vocabulario:\n\nSi es aleatorio, el orden de las palabras al practicar será aleatorio.\n\nSi es espacial, las palabras que peor se te han dado en anteriores sesiones aparecerán las primeras, siendo las últimas las que mejor te sabes.",
+  "coach_tutorial_detail_4": "Por último, si pulsas aquí, podrás cambiar el nombre de la lista, por si te has equivocado o cambiado de opinión con respecto a la temática o categorización elegida."
 }
