--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -206,6 +206,7 @@
   "test_mode_blitz": "Blitztest",
   "test_mode_remembrance": "Gedächtnistest",
   "test_mode_number": "Nummertest",
+  "test_mode_less": "Weniger % Test",
   "test_selection_label": "Wählen Sie einen Test aus, den Sie durchführen möchten",
   "remembrance_bottom_sheet_title": "Einen Gedächtnistest durchführen",
   "remembrance_bottom_sheet_content": "Wort, die Sie schon lange nicht mehr gesehen haben, werden ausgewählt. Machen wir den Gedächtnistest!",
@@ -213,6 +214,9 @@
   "number_bottom_sheet_title": "Mach einen Zahlentest",
   "number_bottom_sheet_content": "Es werden zufällige Zahlen aus dem Bereich oder den Bereichen Ihrer Wahl ausgewählt, um Ihr Hörverständnis zu trainieren. Machen wir den Zahlentest!",
   "number_bottom_sheet_label": "Zufallszahlen",
+  "less_pct_bottom_sheet_title": "Machen Sie einen weniger %-Test",
+  "less_pct_bottom_sheet_content": "Wort mit der geringsten Trefferquote werden ausgewählt. Machen wir den weniger % Test!",
+  "less_pct_bottom_sheet_label": "Weniger %",
   "number_bottom_sheet_begin_ext": "始める",
   "number_bottom_sheet_begin": "Start",
   "image_not_loaded": "Bild kann nicht geladen werden :(",
