--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -206,6 +206,7 @@
   "test_mode_blitz": "Test Blitz",
   "test_mode_remembrance": "Test de Recuerdo",
   "test_mode_number": "Test de Números",
+  "test_mode_less": "Test de Menor %",
   "test_selection_label": "Selecciona un test a realizar",
   "remembrance_bottom_sheet_title": "Hacer un test de recuerdo",
   "remembrance_bottom_sheet_content": "palabras que no hayas visto en mucho tiempo serán seleccionados. ¡Empecemos el test de recuerdo!",
@@ -213,6 +214,9 @@
   "number_bottom_sheet_title": "Hacer un test de números",
   "number_bottom_sheet_content": "números aleatorios serán seleccionados del rango o rangos que elijas para entrenar tu escucha. ¡Empecemos el test de números!",
   "number_bottom_sheet_label": "Números aleatorios",
+  "less_pct_bottom_sheet_title": "Hacer un test de menor %",
+  "less_pct_bottom_sheet_content": "palabras con el menor porcentaje de precisión serán seleccionadas. ¡Empecemos el test de menor %!",
+  "less_pct_bottom_sheet_label": "Menos %",
   "number_bottom_sheet_begin_ext": "始める",
   "number_bottom_sheet_begin": "Empezar",
   "image_not_loaded": "No se ha podido cargar la imagen :(",
