--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -206,6 +206,7 @@
   "test_mode_blitz": "Blitz Test",
   "test_mode_remembrance": "Remembrance Test",
   "test_mode_number": "Number Test",
+  "test_mode_less": "Less % Test",
   "test_selection_label": "Select a test to perform",
   "remembrance_bottom_sheet_title": "Make a remembrance test",
   "remembrance_bottom_sheet_content": "words that you have not seen for a long time will be selected. Let's take the remembrance test!",
@@ -213,6 +214,9 @@
   "number_bottom_sheet_title": "Make a number test",
   "number_bottom_sheet_content": "random numbers from the range or ranges of your choice will be selected to train your listening. Let's take the number test!",
   "number_bottom_sheet_label": "Random Numbers",
+  "less_pct_bottom_sheet_title": "Make a less % test",
+  "less_pct_bottom_sheet_content": "words with the fewest accuracy percentage will be selected. Let's take the less % test!",
+  "less_pct_bottom_sheet_label": "Less %",
   "number_bottom_sheet_begin_ext": "始める",
   "number_bottom_sheet_begin": "Begin",
   "image_not_loaded": "Could not load image :(",
