--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -229,6 +229,7 @@
   "dict_predictions_disclaimer": "Die Suchfunktion verwendet Algorithmen des maschinellen Lernens und die Vorhersagen stimmen möglicherweise nicht mit dem überein, was Sie zeichnen. Wenn die Vorhersagen nicht genau sind, versuchen Sie, das Kanji erneut zu zeichnen.",
   "dict_jisho_add_kanji_bottom_sheet_title": "Wählen Sie eine KanList, um das Wort hinzuzufügen",
   "dict_jisho_add_kanji_label": "Zu KanList hinzufügen",
+  "dict_jisho_create_kanji_list": "Neue KanListe erstellen",
   "dict_add_kanji_title": "Wort malen",
   "dict_model_not_loaded": "Modell konnte nicht geladen werden :(",
   "coach_tutorial_kanlists_1": "Hier sind die von Ihnen erstellten Vokabellisten (es handelt sich um Beispielvokabellisten). In eine neu erstellte Liste sollten Sie die Wörter aufnehmen, die Sie nach einem von Ihnen festgelegten Thema benötigen.",
