--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -229,6 +229,7 @@
   "dict_predictions_disclaimer": "Search function uses Machine Learning algorithms and the predictions may not be aligned with what you draw. If the predictions are not accurate, try drawing the kanji again.",
   "dict_jisho_add_kanji_bottom_sheet_title": "Select a KanList to add the word",
   "dict_jisho_add_kanji_label": "Add to KanList",
+  "dict_jisho_create_kanji_list": "Create a new KanList",
   "dict_add_kanji_title": "Draw word",
   "dict_model_not_loaded": "Could not load model :(",
   "coach_tutorial_kanlists_1": "Here are the vocabulary lists created by you (these are sample vocabulary lists). In a newly created list, you should include the words you want according to a theme defined by you.",
