--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -165,7 +165,8 @@
   "test_history_testTaken": "Test absolviert",
   "test_result_title": "Sie haben erhalten... ",
   "test_result_disclaimer": "Das Ergebnis wird auf Ihrem Gerät gespeichert. Alle Ergebnisse können in Ihren Einstellungen visualisiert werden.",
-  "test_result_save_button_label": "Speichern und beenden",
+  "test_result_save_button_label": "Beenden",
+  "test_result_do_test_button_label": "Einen weiteren Test durchführen",
   "writing_next_kanji_label": "Nächste",
   "writing_validation_failed": "Schreibe zuerst das Etwas",
   "blitz_bottom_sheet_title": "Machen Sie einen Blitztest ",
