--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -165,7 +165,8 @@
   "test_history_testTaken": "Test taken",
   "test_result_title": "You have obtained...",
   "test_result_disclaimer": "The result will be saved in to your device. All results can be visualized in your settings.",
-  "test_result_save_button_label": "Save and Exit",
+  "test_result_save_button_label": "Exit",
+  "test_result_do_test_button_label": "Perform another test",
   "writing_next_kanji_label": "Next",
   "writing_validation_failed": "Write the something first",
   "blitz_bottom_sheet_title": "Make a blitz test",
