--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -165,7 +165,8 @@
   "test_history_testTaken": "Prueba realizada",
   "test_result_title": "Has obtenido...",
   "test_result_disclaimer": "El resultado se guardará en tu dispositivo. Todos los resultados se pueden visualizar en los ajustes",
-  "test_result_save_button_label": "Guardar y salir",
+  "test_result_save_button_label": "Salir",
+  "test_result_do_test_button_label": "Hacer otro test",
   "writing_next_kanji_label": "Siguiente",
   "writing_validation_failed": "Escribir algo primero",
   "blitz_bottom_sheet_title": "Hacer un test blitz",
