--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -259,5 +259,6 @@
   "kanji_category_label": "Categoría",
   "test_mode_categories": "Test de categoría",
   "categories_test_bottom_sheet_title": "Haz un test con la categoría de tu elección",
-  "categories_test_bottom_sheet_label": "Categoría: "
+  "categories_test_bottom_sheet_label": "Categoría:",
+  "categories_test_bottom_sheet_error": "No hay palabras con esta categoría."
 }
