--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -147,7 +147,7 @@
   "settings_general_graphs": "Datenanzeigemodus ändern",
   "settings_tutorial_label": "Tutorial anzeigen",
   "settings_general_versionNotes": "Versionshinweise",
-  "settings_account_section": "Konto verwalten",
+  "settings_account_section": "Konto verwalten & Datensicherung",
   "settings_account_label": "Konto",
   "settings_information_section": "Information",
   "settings_information_contribute": "KanPractice Entwicklungsstatus auf GitHub",
