--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -147,7 +147,7 @@
   "settings_general_graphs": "Cambiar modo de visualización de datos",
   "settings_tutorial_label": "Mostrar tutorial",
   "settings_general_versionNotes": "Notas de Versión",
-  "settings_account_section": "Gestionar Cuenta",
+  "settings_account_section": "Gestionar Cuenta y Copia de Seguridad",
   "settings_account_label": "Cuenta",
   "settings_information_section": "Información",
   "settings_information_contribute": "Estado de Desarrollo de KanPractice en GitHub",
