Fixed overflow on bar char & minor hot fixes

--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -258,7 +258,7 @@
   "kanji_category_conjunction": "Conjunción",
   "kanji_category_interjection": "Interjección",
   "kanji_category_label": "Categoría",
-  "test_mode_categories": "Test de categoría",
+  "test_mode_categories": "Test de Categoría",
   "categories_test_bottom_sheet_title": "Haz un test con la categoría de tu elección",
   "categories_test_bottom_sheet_label": "Categoría:",
   "categories_test_bottom_sheet_error": "No hay palabras con esta categoría."
