--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -272,5 +272,18 @@
   "market_filter_downloads": "Downloads",
   "market_filter_words": "Words",
   "market_need_auth": "You need to be registered in KanPractice. Go to Settings > Account, and log in.",
-  "market_downloaded_successfully": "Successfully downloaded the list onto your device"
+  "market_downloaded_successfully": "Successfully downloaded the list onto your device",
+  "add_to_market_select_list": "Select one of your lists",
+  "add_to_market_title": "Upload a list",
+  "add_to_market_needs_registration": "To create a list in the marketplace you need to be registered on KanPractice.",
+  "add_to_market_description_label": "Description",
+  "add_to_market_description_hint": "Describes the listing for other users.",
+  "add_to_market_successfully_created": "The list was successfully uploaded.",
+  "add_to_market_go_back_to_market_button_label": "Go to marketplace",
+  "add_to_market_validation_failed": "Filled in the fields correctly.",
+  "add_to_market_kanji_empty": "The list you selected has no words",
+  "add_to_market_authentication_failed": "User authentication has failed. Try again.",
+  "add_to_market_already_uploaded": "The list is already uploaded. Try another list.",
+  "add_to_market_something_wrong": "Something happened while uploading the list. Try again later.",
+  "market_download_already_installed": "The list you tried to download is installed already."
 }
